Fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,16 @@
 body {
   background-color: var(--body-bg-color);
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 20px;
+  color: beige
+}
+
+header {
+  display: block;
 }
 
 nav {
+  display: block;
   background-color: var(--navbar-bg-color);
   color: var(--nav-text-color);
 }
@@ -30,10 +37,22 @@ nav a:visited {
 
 nav a:hover {
   text-decoration: underline;
+  color: lightskyblue;
 }
 
 nav a:active {
   text-decoration: underline;
+  color: lightskyblue;
+}
+
+article {
+  position: relative;
+  margin-top: 75px;
+  display: block;
+}
+
+footer {
+  display: block;
 }
 
 footer img {
